fix: add whitespaces and new line according to the rules HTML&CSS Beginner 3.5 and 1.1

--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
 }
 
 @media (max-width:768px) {
-  .colorful-heading { text-align: center;
-}
+  .colorful-heading { 
+    text-align: center;
+  }
 }
 .centered-main-page-element {
     display: block;
